--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -21,7 +21,7 @@ jobs:
           touch out/.nojekyll
       - name: Deploy
         # configure an external GitHub Pages deploy workflow here
-        uses: JamesIves/github-pages-deploy-action@4.4.0
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: pages
           folder: out
