--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -3,6 +3,8 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
